--- a/about.html
+++ b/about.html
@@ -44,12 +44,17 @@
     </nav>
     
 
-    <header class="container text-container">
-        <h3>Hello</h3>
-        <p>I'm Victoria. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, nobis aliquam. Amet officiis quisquam asperiores rerum? Dolorem reprehenderit veritatis laboriosam dignissimos rem quod debitis nobis, harum, praesentium inventore quia adipisci?</p>
-        <button class="download-cv">Download my CV</button>
-        <div class="header-background"></div>
-    </header>
+    <section class="container text-container">
+        <div>
+            <div class="header-background"></div>
+            <h3>Hello</h3>
+            <p>I'm Victoria. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, nobis aliquam. Amet officiis quisquam asperiores rerum? Dolorem reprehenderit veritatis laboriosam dignissimos rem quod debitis nobis, harum, praesentium inventore quia adipisci?</p>
+            <button class="download-cv">Download my CV</button>
+        </div>
+        <div class="image">
+            <img src="#">
+        </div>
+    </section>
 
     <footer class="container">
         <nav>
