--- a/index.html
+++ b/index.html
@@ -50,14 +50,15 @@
         <p id="description">A graphic designer and developer</p>
     </header>
 
-    <section class="container">
-        <div class="container"><h2>Featured Projects</h2></div>
-        <div class="portfolio-projects">
+    <section>
+        <div class="container">
+            <h2 id="#featured">Featured Projects</h2>
+            <div class="portfolio-projects">
         </div>
     </section>
 
     <section class="container contact">
-        <h2>Contact Me <i class="fa-solid fa-arrow-right"></i></h2>
+        <h2>Contact Me</h2>
         <h2>vrmm@hotmail.co.uk</h2>
     </section>
 
