--- a/about.html
+++ b/about.html
@@ -45,18 +45,20 @@
     
 
     <section class="container text-container">
-        <div>
-            <div class="header-background"></div>
-            <h3>Hello</h3>
-            <p>I'm Victoria. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, nobis aliquam. Amet officiis quisquam asperiores rerum? Dolorem reprehenderit veritatis laboriosam dignissimos rem quod debitis nobis, harum, praesentium inventore quia adipisci?</p>
+        <div class="text-container-info">
+            <h2>Hello</h2>
+            <p>I’m Victoria. I’m currently training with iO Academy to become a Software Developer.<br><br>I have over six years experience as a Graphic Designer in the beauty, education and luxury product sectors. Away from the computer, you’ll probably find me at the art gallery.
+                </p>
             <button class="download-cv">Download my CV</button>
         </div>
         <div class="image">
-            <img src="#">
+            <img src="/images/image-placeholder.png" alt="An image of Victoria">
+            <div class="header-background-about"></div>
         </div>
+        
     </section>
 
-    <footer class="container">
+    <footer>
         <nav>
             <div class="nav-links">
                 <a href="#">Home</a>
