--- a/birthstone.html
+++ b/birthstone.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Victoria McCusker | Portfolio</title>
-    <script defer src="index.js"></script>
-    <script defer src="json.js"></script>
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script defer src="json.js"></script>
+    <script defer src="getpages.js"></script>
+
 
     <!--- Fonts -->
 
@@ -49,14 +50,8 @@
         <h1>Generator</h1>
     </header>
 
-    <section class="container">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima hic pariatur harum doloribus voluptatibus autem aliquid ut magnam provident commodi aliquam reiciendis eius, alias incidunt iste, animi asperiores, natus vero!</p>
+    <section class="content"></section>
     </section>
-
-    <section class="container">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima hic pariatur harum doloribus voluptatibus autem aliquid ut magnam provident commodi aliquam reiciendis eius, alias incidunt iste, animi asperiores, natus vero!</p>
-    </section>
-
 
     <footer class="container">
         <nav>
