--- a/portfolio.html
+++ b/portfolio.html
@@ -50,25 +50,23 @@
         <h1>Work</h1>
     </header>
 
-    <section class="container">
-        <div class="portfolio-projects">
+    <section>
+        <div class="container">
+            <div class="portfolio-projects">
         </div>
     </section>
 
-    <footer class="container">
-        <nav>
-            <div class="nav-links">
-                <a href="#">Home</a>
-                <a href="#">Portfolio</a>
-                <a href="#">About</a>
-            </div>
-    
-            <div class="social-media-links">
-                <a href="#">Instagram</a>
-                <a href="#">Linkedin</a>
-            </div> 
-        </nav>
-    </footer>
-    
+    <footer class="footer">
+        <div class="nav-links">
+            <a href="#">Home</a>
+            <a href="#">Portfolio</a>
+            <a href="#">About</a>
+        </div>
+
+        <div class="social-media-links">
+            <a target=”_blank” href="#">Instagram</a>
+            <a target=”_blank” href="https://www.linkedin.com/in/victoria-mccusker/">Linkedin</a>
+        </div> 
+</footer>
 </body>
 </html>
