--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <nav>
         <div class="nav-links">
             <a class="close">x</a>
-            <a href="/index.html">Home</a>
-            <a href="/portfolio.html">Portfolio</a>
-            <a href="/about.html">About</a>
+            <a target=”_blank” href="/index.html">Home</a>
+            <a target=”_blank” href="/portfolio.html">Portfolio</a>
+            <a target=”_blank” href="/about.html">About</a>
         </div>
 
         <div class="social-media-links">
@@ -45,11 +45,11 @@
 
     <header>
         <div class="header-background"></div>
-        <p id="hello">Hello, I'm</p>
-        <h1>Victoria</h1>
-        <h1>McCusker</h1>
-        <p id="description">A graphic designer and developer</p>
-    </header>
+        <div id="hello"><h1 id="hello">Hello, I'm</h1></div>
+        <div><h1 id="first-name">Victoria</h1></div>
+        <div><h1 id="second-name">McCusker</h1></div>
+        <h1 id="description">A graphic designer and developer</h1>
+    </header> 
 
     <section class="container">
 
@@ -60,9 +60,15 @@
     </section>
 
     <section class="container contact">
-        <h2>Contact Me</h2>
+        <h2>Contact Me:</h2>
         <h2>vrmm@hotmail.co.uk</h2>
     </section>
+
+    <div class="go-to-top">
+    <a href="#top">
+        <h2>^</h2>
+        <p>Back to Top</p>
+    </a></div>
 
     <footer class="footer">
             <div class="nav-links">
