--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-    <nav class="container">
+    <nav>
         <div class="nav-links">
             <a class="close">x</a>
             <a target=”_blank” href="/index.html">Home</a>
@@ -43,11 +43,10 @@
         <button class="burger"><i class="fa-solid fa-bars"></i></button>
     </nav>
 
-
     <header class="half">
-        <div class="header-background"></div>
-        <p>All</p>
-        <h1>Work</h1>
+        <div class="header-background-project"></div>
+        <div id="hello"><h1 id="hello">All</h1></div>
+        <div><h1 id="first-name">Work</h1></div>
     </header>
 
     <section>
@@ -64,9 +63,9 @@
         </div>
 
         <div class="social-media-links">
-            <a target=”_blank” href="#">Instagram</a>
-            <a target=”_blank” href="https://www.linkedin.com/in/victoria-mccusker/">Linkedin</a>
-        </div> 
-</footer>
+                <a target=”_blank” href="#">Instagram</a>
+                <a target=”_blank” href="https://www.linkedin.com/in/victoria-mccusker/">Linkedin</a>
+            </div> 
+    </footer>
 </body>
 </html>
