--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
 
     <div class="go-to-top">
     <a href="#top">
-        <h2>^</h2>
-        <p>Back to Top</p>
+        <i class="fa-solid fa-angle-up"></i>
     </a></div>
 
     <footer class="footer">
