--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
     <script defer src="index.js"></script>
     <script defer src="json.js"></script>
 
+    <!-- Javascript Links -->
+
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 
@@ -31,37 +33,42 @@
     <nav>
         <div class="nav-links">
             <a class="close">x</a>
-            <a target=”_blank” href="/index.html">Home</a>
-            <a target=”_blank” href="/portfolio.html">Portfolio</a>
-            <a target=”_blank” href="/about.html">About</a>
+            <a href="/index.html">Home</a>
+            <a href="/portfolio.html">Portfolio</a>
+            <a href="/about.html">About</a>
         </div>
 
         <div class="social-media-links">
-            <a target=”_blank” href="#">Instagram</a>
+            <a target=”_blank” href="https://www.instagram.com/victoriamccusker_design/">Instagram</a>
             <a target=”_blank” href="https://www.linkedin.com/in/victoria-mccusker/">Linkedin</a>
         </div>
         <button class="burger"><i class="fa-solid fa-bars"></i></button>
     </nav>
     
 
-    <section class="container text-container">
+    <section class="text-container about-page">
         <div>
             <h2>Hello</h2>
             <p>I’m Victoria. I’m currently training with iO Academy to become a Software Developer.<br><br>I have over six years experience as a Graphic Designer in the beauty, education and luxury product sectors. Away from the computer, you’ll probably find me at the art gallery.</p>
-            <button class="download-cv">Download my CV</button>
         </div>
         <div class="image">
-            <img src="/images/image-placeholder.png" alt="An image of Victoria">
+            <img src="/images/headshot-victoria-mccusker.jpeg" alt="An image of Victoria">
             <div class="header-background-about"></div>
         </div>
     </section>
 
-    <section class="container contact-me-about">
+    <section class="about-page">
         <div>
             <h2>Contact Me</h2>
-            <p>Please contact me at my email address: <a class="email-link" href="mailto:vrmm@hotmail.co.uk" subject="Website Query" target="_blank"><span>vrmm@hotmail.co.uk</span></a></p>
-            <p>Alternatively, you can contact me through Instagram or Linkedin.</p>
+            <p>Please contact me at my email address: <a class="email-link" href="mailto:vrmm@hotmail.co.uk" subject="Website Query" target="_blank"><span>vrmm@hotmail.co.uk</span></a>
+            <br><br>Alternatively, you can contact me through Instagram or Linkedin using the links above</span>
         </div>
+    </section>
+
+    <section class="go-to-top-container">
+        <a class="go-to-top" href="#top">
+            <i class="fa-solid fa-angle-up"></i>
+        </a>
     </section>
 
     <footer class="footer">
@@ -72,7 +79,7 @@
         </div>
 
         <div class="social-media-links">
-                <a target=”_blank” href="#">Instagram</a>
+                <a target=”_blank” href="https://www.instagram.com/victoriamccusker_design/">Instagram</a>
                 <a target=”_blank” href="https://www.linkedin.com/in/victoria-mccusker/">Linkedin</a>
             </div> 
     </footer>
