--- a/birthstone.html
+++ b/birthstone.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Victoria McCusker | Portfolio</title>
+    <title>Victoria McCusker | Portfolio | Birthstone Project</title>
+
+    <!-- Javascript Links -->
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -30,13 +32,13 @@
     <nav>
         <div class="nav-links">
             <a class="close">x</a>
-            <a target=”_blank” href="/index.html">Home</a>
-            <a target=”_blank” href="/portfolio.html">Portfolio</a>
-            <a target=”_blank” href="/about.html">About</a>
+            <a href="/index.html">Home</a>
+            <a href="/portfolio.html">Portfolio</a>
+            <a href="/about.html">About</a>
         </div>
 
         <div class="social-media-links">
-            <a target=”_blank” href="#">Instagram</a>
+            <a target=”_blank” href="https://www.instagram.com/victoriamccusker_design/">Instagram</a>
             <a target=”_blank” href="https://www.linkedin.com/in/victoria-mccusker/">Linkedin</a>
         </div>
         <button class="burger"><i class="fa-solid fa-bars"></i></button>
@@ -60,7 +62,6 @@
 
     </section>
     
-
 
     <footer class="footer">
             <div class="nav-links">
