--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script defer src="json.js"></script>
     <script defer src="getpages.js"></script>
 
+    <!-- Javascript Links -->
+
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 
@@ -31,13 +33,13 @@
     <nav>
         <div class="nav-links">
             <a class="close">x</a>
-            <a target=”_blank” href="/index.html">Home</a>
-            <a target=”_blank” href="/portfolio.html">Portfolio</a>
-            <a target=”_blank” href="/about.html">About</a>
+            <a href="/index.html">Home</a>
+            <a href="/portfolio.html">Portfolio</a>
+            <a href="/about.html">About</a>
         </div>
 
         <div class="social-media-links">
-            <a target=”_blank” href="#">Instagram</a>
+            <a target=”_blank” href="https://www.instagram.com/victoriamccusker_design/">Instagram</a>
             <a target=”_blank” href="https://www.linkedin.com/in/victoria-mccusker/">Linkedin</a>
         </div>
         <button class="burger"><i class="fa-solid fa-bars"></i></button>
@@ -51,12 +53,11 @@
         <h1 id="description">A graphic designer and developer</h1>
     </header> 
 
-    <section class="container">
+    <section>
+            <h2 class="container">Featured Projects</h2>
+            <div class="featured">
 
-            <h2 id="featured">Featured Projects</h2>
-            <div class="portfolio-projects">
-                
-        </div>
+            </div>
     </section>
 
     <section class="container contact">
@@ -64,10 +65,11 @@
         <h2>vrmm@hotmail.co.uk</h2>
     </section>
 
-    <div class="go-to-top">
-    <a href="#top">
+    <section class="go-to-top-container">
+        <a class="go-to-top" href="#top">
         <i class="fa-solid fa-angle-up"></i>
-    </a></div>
+        </a>
+    </section>
 
     <footer class="footer">
             <div class="nav-links">
@@ -77,7 +79,7 @@
             </div>
     
             <div class="social-media-links">
-                <a target=”_blank” href="#">Instagram</a>
+                <a target=”_blank” href="https://www.instagram.com/victoriamccusker_design/">Instagram</a>
                 <a target=”_blank” href="https://www.linkedin.com/in/victoria-mccusker/">Linkedin</a>
             </div> 
     </footer>
