--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Victoria McCusker | Portfolio</title>
-    <script defer src="index.js"></script>
     <script defer src="json.js"></script>
+
+    <!-- Javascript Links -->
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -31,28 +32,32 @@
     <nav>
         <div class="nav-links">
             <a class="close">x</a>
-            <a target=”_blank” href="/index.html">Home</a>
-            <a target=”_blank” href="/portfolio.html">Portfolio</a>
-            <a target=”_blank” href="/about.html">About</a>
+            <a href="/index.html">Home</a>
+            <a href="/portfolio.html">Portfolio</a>
+            <a href="/about.html">About</a>
         </div>
 
         <div class="social-media-links">
-            <a target=”_blank” href="#">Instagram</a>
+            <a target=”_blank” href="https://www.instagram.com/victoriamccusker_design/">Instagram</a>
             <a target=”_blank” href="https://www.linkedin.com/in/victoria-mccusker/">Linkedin</a>
         </div>
         <button class="burger"><i class="fa-solid fa-bars"></i></button>
     </nav>
 
-    <header class="half">
-        <div class="header-background-project"></div>
-        <div id="hello"><h1 id="hello">All</h1></div>
-        <div><h1 id="first-name">Work</h1></div>
+    <header>
+        <div class="header-background"></div>
+        <h1 id="hello">All</h1>
+        <div><h1>Work</h1></div>
     </header>
 
-    <section>
-        <div class="container">
-            <div class="portfolio-projects">
-        </div>
+    <section class="design">
+        <div class="portfolio-projects container-projects">
+    </section>
+
+    <section class="go-to-top-container">
+        <a class="go-to-top" href="#top" alt="Go to the top of the page">
+            <i class="fa-solid fa-angle-up"></i>
+        </a>
     </section>
 
     <footer class="footer">
@@ -63,7 +68,7 @@
         </div>
 
         <div class="social-media-links">
-                <a target=”_blank” href="#">Instagram</a>
+                <a target=”_blank” href="https://www.instagram.com/victoriamccusker_design/">Instagram</a>
                 <a target=”_blank” href="https://www.linkedin.com/in/victoria-mccusker/">Linkedin</a>
             </div> 
     </footer>
