--- a/about.html
+++ b/about.html
@@ -51,13 +51,13 @@
             <h2>Hello</h2>
             <p>I’m Victoria. I’m currently training with iO Academy to become a Software Developer.<br><br>I have over six years experience as a Graphic Designer in the beauty, education and luxury product sectors. Away from the computer, you’ll probably find me at the art gallery.</p>
         </div>
-        <div class="image">
-            <img src="/images/headshot-victoria-mccusker.jpeg" alt="An image of Victoria">
+        <div class="profile-image">
+            <img class="profile-image" src="/images/headshot-victoria-mccusker.jpeg" alt="An image of Victoria">
             <div class="header-background-about"></div>
         </div>
     </section>
 
-    <section class="about-page">
+    <section class="text-container about-page">
         <div>
             <h2>Contact Me</h2>
             <p>Please contact me at my email address: <a class="email-link" href="mailto:vrmm@hotmail.co.uk" subject="Website Query" target="_blank"><span>vrmm@hotmail.co.uk</span></a>
@@ -67,7 +67,7 @@
 
     <section class="go-to-top-container">
         <a class="go-to-top" href="#top">
-            <i class="fa-solid fa-angle-up"></i>
+        <i class="fa-solid fa-angle-up"></i>
         </a>
     </section>
 
