--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
 
     <section>
             <h2 class="container">Featured Projects</h2>
-            <div class="featured">
-
-            </div>
+            <div class="featured"></div>
     </section>
 
     <section class="container contact">
