adding Cardiff Bookshop project

--- a/about.html
+++ b/about.html
@@ -61,14 +61,8 @@
         <div>
             <h2>Contact Me</h2>
             <p>Please contact me at my email address: <a class="email-link" href="mailto:vrmm@hotmail.co.uk" subject="Website Query" target="_blank"><span>vrmm@hotmail.co.uk</span></a>
-            <br><br>Alternatively, you can contact me through Instagram or Linkedin using the links above</span>
+            <!-- <br><br>Alternatively, you can contact me through Instagram or Linkedin using the links above</span> -->
         </div>
-    </section>
-
-    <section class="go-to-top-container">
-        <a class="go-to-top" href="#top">
-        <i class="fa-solid fa-angle-up"></i>
-        </a>
     </section>
 
     <footer class="footer">
