--- a/birthstone.html
+++ b/birthstone.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <script defer src="getpages.js"></script>
+    <script defer src="json.js"></script>
 
     <!--- Fonts -->
 
@@ -58,9 +59,10 @@
 
     </section>
 
-    <section class="video-container">
+    <section class="full-width02"> 
 
     </section>
+
     
 
     <footer class="footer">
