--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <section class="go-to-top-container">
         <a class="go-to-top" href="#top">
-        <i class="fa-solid fa-angle-up"></i>
+        <i class="fa-solid fa-angle-up arrow"></i>
         </a>
     </section>
 
