--- a/portfolio.html
+++ b/portfolio.html
@@ -50,13 +50,13 @@
         <div><h1>Work</h1></div>
     </header>
 
-    <section class="design">
+    <section>
         <div class="portfolio-projects container-projects">
     </section>
 
     <section class="go-to-top-container">
         <a class="go-to-top" href="#top" alt="Go to the top of the page">
-            <i class="fa-solid fa-angle-up"></i>
+            <i class="fa-solid fa-angle-up arrow"></i>
         </a>
     </section>
 
