--- a/cardiffBookshopMap.html
+++ b/cardiffBookshopMap.html
@@ -51,19 +51,8 @@
         </div>
     </header>
 
-    <section class="full-width">
-
-    </section>
-
-    <section class="content">
-
-    </section>
-
-    <section class="full-width02"> 
-
-    </section>
-
-    
+    <section class="content"></section>
+    <section class="full-width02"></section>
 
     <footer class="footer">
             <div class="nav-links">
