--- a/portfolio.html
+++ b/portfolio.html
@@ -54,6 +54,26 @@
         <div class="portfolio-projects container-projects">
     </section>
 
+    <section>
+        <div class="container main-image-project-page "><h2>Side Projects</h2></div>
+        <div class="container scroll-container invisible-scrollbar">
+            <img src="/images/3DDesign/3D_Slurp.jpg">
+            <img src="/images/3DDesign/3D_Knot.jpg">
+            <img src="/images/3DDesign/3D_Glow.jpg">
+            <img src="/images/3DDesign/3D_Twirl.jpg">
+            <img src="/images/3DDesign/3D_Hair.jpg">
+            <img src="/images/3DDesign/3D_Cool.jpg">
+            <img src="/images/3DDesign/3D_Flower.jpg">
+            <img src="/images/3DDesign/3D_a.jpg">
+            <img src="/images/3DDesign/3D_Cook.jpg">
+            <img src="/images/3DDesign/3D_Banana.jpg">
+            <img src="/images/3DDesign/3D_Rainbow.jpg">
+            <img src="/images/3DDesign/3D_Box.jpg">
+        </div>
+    </section>
+
+    
+
     <section class="go-to-top-container">
         <a class="go-to-top" href="#top" alt="Go to the top of the page">
             <i class="fa-solid fa-angle-up arrow"></i>
