fixing page links

--- a/birthstone.html
+++ b/birthstone.html
@@ -33,8 +33,8 @@
     <nav>
         <div class="nav-links">
             <a class="close">x</a>
-            <a href="/index.html">Home</a>
-            <a href="/portfolio.html">Portfolio</a>
+            <a href="index.html">Home</a>
+            <a href="portfolio.html">Portfolio</a>
             <a href="/about.html">About</a>
         </div>
 
