fixing links and imagery

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,9 +32,9 @@
     <nav>
         <div class="nav-links">
             <a class="close">x</a>
-            <a href="/index.html">Home</a>
-            <a href="/portfolio.html">Portfolio</a>
-            <a href="/about.html">About</a>
+            <a href="index.html">Home</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="about.html">About</a>
         </div>
 
         <div class="social-media-links">
@@ -57,18 +57,18 @@
     <section>
         <div class="container main-image-project-page "><h2>Side Projects</h2></div>
         <div class="container scroll-container invisible-scrollbar">
-            <img src="/images/3DDesign/3D_Slurp.jpg">
-            <img src="/images/3DDesign/3D_Knot.jpg">
-            <img src="/images/3DDesign/3D_Glow.jpg">
-            <img src="/images/3DDesign/3D_Twirl.jpg">
-            <img src="/images/3DDesign/3D_Hair.jpg">
-            <img src="/images/3DDesign/3D_Cool.jpg">
-            <img src="/images/3DDesign/3D_Flower.jpg">
-            <img src="/images/3DDesign/3D_a.jpg">
-            <img src="/images/3DDesign/3D_Cook.jpg">
-            <img src="/images/3DDesign/3D_Banana.jpg">
-            <img src="/images/3DDesign/3D_Rainbow.jpg">
-            <img src="/images/3DDesign/3D_Box.jpg">
+            <img src="images/3DDesign/3D_Slurp.jpg">
+            <img src="images/3DDesign/3D_Knot.jpg">
+            <img src="images/3DDesign/3D_Glow.jpg">
+            <img src="images/3DDesign/3D_Twirl.jpg">
+            <img src="images/3DDesign/3D_Hair.jpg">
+            <img src="images/3DDesign/3D_Cool.jpg">
+            <img src="images/3DDesign/3D_Flower.jpg">
+            <img src="images/3DDesign/3D_a.jpg">
+            <img src="images/3DDesign/3D_Cook.jpg">
+            <img src="images/3DDesign/3D_Banana.jpg">
+            <img src="images/3DDesign/3D_Rainbow.jpg">
+            <img src="images/3DDesign/3D_Box.jpg">
         </div>
     </section>
 
