--- a/birthstone.html
+++ b/birthstone.html
@@ -35,7 +35,7 @@
             <a class="close">x</a>
             <a href="index.html">Home</a>
             <a href="portfolio.html">Portfolio</a>
-            <a href="/about.html">About</a>
+            <a href="about.html">About</a>
         </div>
 
         <div class="social-media-links">
