--- a/calibreAudio.html
+++ b/calibreAudio.html
@@ -33,9 +33,9 @@
     <nav>
         <div class="nav-links">
             <a class="close">x</a>
-            <a href="/index.html">Home</a>
-            <a href="/portfolio.html">Portfolio</a>
-            <a href="/about.html">About</a>
+            <a href="index.html">Home</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="about.html">About</a>
         </div>
 
         <div class="social-media-links">
