--- a/bloggingWebsite.html
+++ b/bloggingWebsite.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Victoria McCusker | Portfolio | Jobsearch Website</title>
+    <title>Victoria McCusker | Portfolio | Vaniday</title>
 
     <!-- Javascript Links -->
 
@@ -54,14 +54,14 @@
     <section class="full-width">
 
     </section>
-    
 
     <section class="content">
 
     </section>
 
-    <section class="full-width02"></section>
-    
+    <section class="full-width02"> 
+
+    </section>
 
     <footer class="footer">
             <div class="nav-links">
