--- a/jobsearchWebsite.html
+++ b/jobsearchWebsite.html
@@ -58,6 +58,9 @@
 
     <section class="content">
 
+        <div class="left-container"></div>
+        <div class="content02"></div>
+
     </section>
 
     <section class="full-width02"></section>
