--- a/birthstone.html
+++ b/birthstone.html
@@ -57,6 +57,9 @@
 
     <section class="content">
 
+        <div class="left-container"></div>
+        <div class="content02"></div>
+
     </section>
 
     <section class="full-width02"> 
