--- a/cardiffBookshopMap.html
+++ b/cardiffBookshopMap.html
@@ -51,7 +51,12 @@
         </div>
     </header>
 
-    <section class="content"></section>
+    <section class="content">
+
+        <div class="left-container"></div>
+        <div class="content02"></div>
+
+    </section>
     <section class="full-width02"></section>
 
     <footer class="footer">
