fixing burger menu

--- a/interactiveRatingComponent.html
+++ b/interactiveRatingComponent.html
@@ -48,16 +48,17 @@
     <header>
         <div class="header-project-pages">
         <div class="header-background-project"></div>
+        
         </div>
+
     </header>
 
-    <section class="full-width">
-
-    </section>
 
     <section class="content">
 
-        <div class="left-container"></div>
+        <div class="left-container">
+            <span class="full-width"></span>
+        </div>
         <div class="content02"></div>
 
     </section>
