--- a/jobsearchWebsite.html
+++ b/jobsearchWebsite.html
@@ -51,19 +51,18 @@
         </div>
     </header>
 
-    <section class="full-width">
-
-    </section>
-    
-
     <section class="content">
 
-        <div class="left-container"></div>
+        <div class="left-container">
+            <span class="full-width"></span>
+        </div>
         <div class="content02"></div>
 
     </section>
 
-    <section class="full-width02"></section>
+    <section class="full-width02"> 
+
+    </section>
     
 
     <footer class="footer">
