adding horizontal scrollbargi

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
     <section class="text-container about-page">
         <div>
             <h2>Hello</h2>
-            <p>I’m Victoria. I’m currently training with iO Academy to become a Software Developer.<br><br>I have over six years experience as a Graphic Designer in the beauty, education and luxury product sectors. Away from the computer, you’ll probably find me at the art gallery.</p>
+            <p>I’m Victoria. I’m currently training with iO Academy to become a Software Developer.<br><br>I have several years of experience as a Graphic Designer in the beauty, education and luxury product sectors. Away from the computer, you’ll probably find me at the art gallery.</p>
         </div>
         <div class="profile-image">
             <img class="profile-image" src="images/headshot-victoria-mccusker.jpeg" alt="An image of Victoria">
