fixing header on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
     </nav>
 
     <header>
-        <div class="header-background"></div>
+        <div class="header-background-project"></div>
         <h1 id="hello">All</h1>
         <div><h1>Work</h1></div>
     </header>
