--- a/cardiffBookshopMap.html
+++ b/cardiffBookshopMap.html
@@ -27,6 +27,16 @@
 
     <script src="https://kit.fontawesome.com/e0d2814aa7.js" crossorigin="anonymous"></script>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KCDL35F8P0"></script>
+    <script>
+     window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-KCDL35F8P0');
+    </script>
+
 </head>
 <body>
 
