--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
     <section class="text-container about-page">
         <div>
             <h2>Hello</h2>
-            <p>I’m Victoria, a graphic designer and Software Developer.<br><br>I have recently completed a Software Development Bootcamp at iO Academy. In addition, I have several years of experience as a Graphic Designer in the beauty, education and luxury product sectors. Away from the computer, you’ll probably find me at the art gallery.</p>
+            <p>I’m Victoria, a graphic designer with several years experience in the beauty, education and luxury product sector and training in Software Development<br><br>I am currently working as a Graphic Designer at Parentpay Group. Away from the computer, you’ll probably find me at the art gallery.</p>
         </div>
         <div class="profile-image">
             <img class="profile-image" src="images/headshot-victoria-mccusker.jpeg" alt="An image of Victoria">
