--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
     <section class="text-container about-page">
         <div>
             <h2>Hello</h2>
-            <p>I’m Victoria, a graphic designer with several years experience in the beauty, education and luxury product sector and training in Software Development<br><br>I am currently working as a Graphic Designer at Parentpay Group. Away from the computer, you’ll probably find me at the art gallery.</p>
+            <p>I’m Victoria, a graphic designer with several years experience in the beauty, education and luxury product sectors.<br><br>I am currently working as a Graphic Designer at Parentpay Group. On this website you will find Graphic Design work and Software Development projects from my time doing a bootcamp at iO Academy.  </p>
         </div>
         <div class="profile-image">
             <img class="profile-image" src="images/headshot-victoria-mccusker.jpeg" alt="An image of Victoria">
